# chains

./: .flake8  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: verify.yml
chains/: __init__.py  chain.py  sniff.py
chains/tests/: test_builtins.py  test_equality.py  test_iterables.py  test_navigation.py  test_operators.py  test_sniffs.py
