[tool.black]
line-length = 120

[tool.poetry]
name = "chains"
version = "1.0.0"
description = "Python safe navigation for complex objects"
authors = ["Jordan Ambra <jordan@serenity.software>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "8.1.1"
black = "24.4.0"
flake8 = "7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
